[gd_scene load_steps=2 format=3 uid="uid://hh261irkgxdl"]

[ext_resource type="Script" path="res://ui/CtfGui.gd" id="1_n1cyq"]

[node name="CTFGui" type="CanvasLayer"]
script = ExtResource("1_n1cyq")
ally_color = Color(0, 0.117647, 0.780392, 1)
enemy_color = Color(0.690196, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AllyFlag" type="ColorRect" parent="MarginContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
color = Color(0, 0.117647, 0.780392, 1)

[node name="AllyScore" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.117647, 0.780392, 1)
theme_override_font_sizes/font_size = 32
text = "0
"

[node name="Timer" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "< 00:00 >"

[node name="EnemyScore" type="Label" parent="MarginContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.690196, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "0
"

[node name="EnemyFlag" type="ColorRect" parent="MarginContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
color = Color(0.690196, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="MarginContainer/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.196078)
